INFUND-9293 Password validation small bugfixes

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
@@ -213,7 +213,7 @@ tr.form-group-row.error {
   background-position: 4px 50%;
 
   .error-message {
-    display: none;
+    @extend .visually-hidden
   }
 
   > *:first-child{
